Fixed the setup for tooltip (hover functionality) and the visualisation mode selector. Also changed the text visualisation of the nodes, now they are always readable because they are in the middle.

--- a/styles/NodeTrixStyle.css
+++ b/styles/NodeTrixStyle.css
@@ -23,8 +23,10 @@
     text-overflow: ellipsis; /* Adds ellipsis for overflowed text */
 }
 
-.NL-label {
-    pointer-events: none
+.NLlabel,
+.label.NLlabel {
+    pointer-events: none;
+    user-select: none;
 }
 
 
